# ml-ai-pocs

./: README.md
poc__agent_langgraph/: .env  main.py  pyproject.toml
poc__hf_text_classification_peft/: Pipfile
poc__hf_text_classification_peft/src/: main.ipynb
poc__hf_text_extraction_peft/: Pipfile
poc__hf_text_extraction_peft/src/: main.ipynb
poc__llm_script_shredder/: .env.example  Pipfile
poc__llm_script_shredder/data/: groundhogday.txt  mindy.fdx  stargatesg1-101.txt  thor-ragnarok.txt
poc__llm_script_shredder/final/: training_dataset.json
poc__llm_script_shredder/results/: Before-Sunrise.json  Lady-Bird.json  Progressive-Breakdown.json  Student-Film-Breakdown.json  Toyota-Breakdown.json  US-Celluar-Breakdown.json  Uber-Eats-Breakdown.json
poc__llm_search_attributes/: Pipfile  README.md  docker-compose.yml
poc__llm_search_attributes/api/: Dockerfile  main.py
poc__llm_search_attributes/docs/: research.md
poc__llm_search_attributes/frontend/: Dockerfile  requirements.txt  streamlit_app.py
poc__llm_search_attributes_vector/: .env.example  .gitignore  Pipfile  README.md  docker-compose.yml
poc__llm_search_attributes_vector/api/: Dockerfile  app.py  requirements.txt
poc__llm_sql_builder/: docker-compose.yml  go.mod
poc__llm_sql_builder/cmd/: main.go
poc__llm_sql_generator/: .env  main.py  pyproject.toml
poc__ml_facial_recognition/: Pipfile
poc__rekogn_actor_search/: Pipfile  README.md
poc__rekogn_celebrity_comparsion/: Makefile  Pipfile  README.md
poc__rekogn_facial_analysis/: Pipfile
poc__sd_image_generation/: Pipfile
(+73 files in other folders)
